<resources>
    <string name="app_name">My Weather Hub</string>
    <string name="weather_notes">Weather notes</string>
    <string name="register">Register account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="title_activity_weather_details">Weather Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="email_invalid">Email is invalid!</string>
    <string name="passwordEditText">Password length has to be greater than 5!</string>
    <string name="confirmPasswordEditText">Password not matching!</string>

    <string name="succ_reg">Successfully registered, check your email to verify.</string>

    <string name="logout">Logout</string>
    <string name="que">Do you really want to log out ?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="data">Database updated successfully.</string>
    <string name="data_err">Failed while updating database.</string>

    <string name="email_ver">Email not verified, please verify your email.</string>

    <string name="note_title">Note title cannot be empty!</string>
    <string name="city_name">City name cannot be empty!</string>

    <string name="weat_inf">Weather information saved to database.</string>

    <string name="curr_wea">Current weather of: </string>
    <string name="temp">Temperature: </string>
    <string name="hum">Humidity: </string>
    <string name="desc">Description: </string>
    <string name="wind">Wind Speed:  </string>
    <string name="cloud">Cloudiness: </string>
    <string name="press">Pressure: </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register2">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="description">Description</string>
    <string name="wind2">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="update_database">Update database</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="current_weather_information">Current weather information</string>
    <string name="enter_a_list_title">Enter a List title</string>
    <string name="enter_a_city_name">Enter a city name</string>
    <string name="show_current_weather">Show current weather</string>
    <string name="save_weather">Save weather</string>
    <string name="my_weather">My Weather</string>
    <string name="my_weather_hub">My Weather Hub</string>
    <string name="my_lists">My Lists</string>
    <string name="note_title2">Title</string>


</resources>